static/css/theme.css
body {
    /*padding-top: 70px;*/
    padding-bottom: 30px;
    margin-bottom: 50px;
}
/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

#header-box {
    border: 1px solid #E5E5E5;
    border-radius: 4px;
    margin-bottom: 10px;
    background-color: #F9F9F9;
    min-height: 150px;
}

#header-box h1 {
    font-size: 50px;
    display: inline-block;
    padding: 10px;
    margin-left: 10px;
    margin-bottom: 20px;
}

#header-box .img-logo {
    max-height: 100px;
    float: right !important;
    margin: 20px;
    padding: 0;
}

#header-box .img-person {
    max-height: 150px;
    width: auto;
    float: left !important;
    margin: 0px;
    padding: 0;
    border-radius: 4px;
}

#footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 50px;
    background-color: #F9F9F9;
    border-top: 1px solid #E5E5E5;
    padding: 10px 0;
    text-align: center;
}

#map_canvas {
    width: auto;
    height: 200px;
}

.img-logo {
    max-height: 200px;
    max-width: 200px;
    display: inline-block;
    padding: 4px;
    line-height: 1.42857143;
    /*background-color: #fff;*/
    -webkit-transition: all .2s ease-in-out;
          transition: all .2s ease-in-out;
}

.img-person {
    width: 160px;
    height: 200px;
}

.affix {
  width: inherit;
  top: 50px;
}

.affix-bottom {
  width: inherit;
  position: absolute;
  top: auto;
  bottom: 50px; 
}

.affix-top {
  
}

.form-signin {
  max-width: 330px;
/*  padding: 15px;*/
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
/*  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;*/
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
/*  border-top-left-radius: 0;
  border-top-right-radius: 0;*/
}

